styles.scss
/* ... */
// Footer
.footer {
    margin-top: 16*$margin;
    text-align: center;
    color: $gray;
    font-style: italic;
    font-size: 10px;
    line-height: 1.75;
    .hr {
        padding-bottom: 0;
    }
    img {
        padding: 2 * $margin;
    }
}


// Search
$search-height: 50px;
.search-box {
    padding: $margin * 2;
    padding-top: $margin * 4;
    width: 100%;
    height: $search-height;
    border: 2px solid black;
    outline: none;
    @include placeholder {
        font-style: italic;
    }
    @include xs {
        height: initial;
        padding: 6px 12px;
        padding-top: 12px;
    }
}

// Types
.type-representation {
    text-align: left;
    > div {
        padding-top: $margin;
    }
    h3 {
        margin-top: 0;
        margin-bottom: 2px;
    }
    svg { max-width: 100%; }
    &.first p.definition {
        padding-top: 7*$margin;
    }
    &.expanded {
        h3 { 
            padding-top: 3*$margin; 
            @include xs {
                padding-top: 0;
            }
        }
        //svg { border-right: 0; }
    }
    .definition {
        p { padding-top: $margin; }
        @include xs {
            font-size: 12px;
            line-height: 18px;
        }
    }
}
.pattern-container-wrapper {
    z-index: 0;
    .outside-pattern {
        height: 265px;
    }
    .pattern {
        position: absolute;
        opacity: .3;
        bottom: 0;
        width: 95%;
        svg {
            width: 100%;
            height: auto;
        }
    }
}
.module-types {
    //@include prefix(transition, height $transition linear, webkit moz);
    border: 2px solid black;
    border-top: 0;
    text-align: center;
    background: white;
    position: relative;
    padding: 2*$margin 0;
    @include sm {
        padding: 2*$margin;
    }
    > div {
        overflow: hidden;
        height: 100%;
    }
    .loader-wrapper {
        min-height: 100px;
    }
    &.expanded::before {
        content: '';
        position: absolute;
        border: 1px solid black;
        height: 40px; width: 0;
        left: 51%; top: 95%;
    }
    // Styles for selected 
    .type-list, .type-description {
        text-align: left;
        padding: 2 * $margin 22px;
        .expanded {
            padding: 4 * $margin 22px;
        }
        svg-inline {
            display: inline-block;
        }
    }
    .type-list {
        position: relative;
        z-index: 100;
        .h3 {
            color: black;
            margin-top: -3px; //margin-top: 0; /* compensate for change in baseline */
        }
        .type-link {
            font-weight: bold;
            text-transform: uppercase;
            display: inline-block;
            margin-right: 2 * $margin;
        }
        .regions {
            display: inline-block;
            vertical-align: top;
        }
        .expanded {
            &.type-link {
                padding: $margin 0;
                display: block;
                * { 
                    opacity: 1.0;
                    @include prefix(transition, opacity $transition linear, webkit moz);
                    &.selected { opacity: 0; }
                }
                &.selected {
                    opacity: 0;
                }
                @include xs {
                    display: inline-block;
                }
            }
        }
    }
    .regions {
        @include xs {
            svg { width: 36px; }
            padding: 0 !important;
        }
    }
    .type-pattern {
        h3 {
            font-size: 50px;
            position: absolute;
            z-index: 50;
            right: 4px; top: 5 * $margin;
        }
        svg-inline {
            position: absolute;
            right: 0; top: 3 * $margin;
            width: 100%;
            @include sm {
                width: 200%;
            }
            svg {
                width: 100%;
                height: auto;
                opacity: .3;
            }
        }
    }
    .type-description {
        p { margin-right: 50px; }
        h3 {
            border-bottom: 2px solid black;
            padding-bottom: 4px;
            margin-bottom: 36px;
            width: 50%;
        }
        h3::before {
            content: '';
            position: relative;
            border: 1px solid black;
            height: 30px; width: 0;
            left: 75%; top: 25px;
        }
    }
    .arrow {
        position: absolute;
        z-index: 1000;
        bottom: 0; right: 0;
        padding: 2 * $margin + 2 4 * $margin;
        display: inline-block;
        @include prefix(transition, transform $transition linear, webkit moz);
        transform: rotate(-90deg);
        svg * { fill: $lightgray; }
    }
    .arrow.selected {
        transform: rotate(-270deg);
        svg * { fill: black; }
    }
}

// Gallery
.gallery {
    padding-top: $search-height;
    //@include prefix(transition, margin-top $transition linear, webkit moz);
}
.gallery-sort {
    text-align: center;
    .sort-by {
        color: $gray;
        font-weight: bold;
        text-transform: uppercase;
    }
    .sort-by div {
        text-decoration: underline;
    }
    .sort-by .selected {
        color: black;
    }
    .view-as, .sort-by {
        margin-bottom: 8 * $margin;
    }
    .gallery-clear {
        padding-top: 6 * $margin;
    }
    .tag.selected {
        color: black;
    }
    @include sm-down {
        text-align: initial;
        h3 { 
            display: inline-block; 
        }
        h3, span {
            padding-right: 6px;
        }
        svg {
            width: 18px;
            position: relative;
            top: 6px;
            margin-right: 6px;
        }
    }
}
.gallery-sort, .gallery-list, .gallery-info {
    padding-top: 2 * $margin;
}
.gallery-clear {
    font-weight: bold;
    padding-right: 4 * $margin;
    text-transform: uppercase;
    .icon {
        font-size: 150%;
    }
}
/* ... */

